# crypto-sample-ts

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TEST_INSTRUCTIONS.md  biome.json  index.html  package-lock.json  package.json  test-ibe-full.html  test-ibe.html  tsconfig.json  vite.config.ts
.claude/: settings.local.json
docs/: aegis-crypto-core-falcon-investigation.md  asymmetric-libraries.md  falcon-rust-investigation.md  github-pages-deployment.md  ibe-abe-implementation.md  post-quantum-implementation-summary.md  post-quantum-libraries.md  post-quantum-rust-libraries-research.md  searchable-encryption-libraries.md  sphincsplus-investigation.md
src/asymmetric/: abe.ts  ecc.ts  ibe.ts  rsa.ts
src/hash/: blake2b.ts  blake3.ts  index.ts  sha256.ts  sha3-256.ts  sha512.ts  siphash.ts
src/post-quantum/: dilithium.ts  falcon.ts  kyber.ts
src/searchable/: sse.ts
src/symmetric/: aes.ts  chacha20.ts  poly1305.ts
src/utils/: format.ts
src/web/: main.ts
tests/asymmetric/: ecc.test.ts  ibe-full.test.ts  ibe.test.ts  kpabe-full.test.ts  rsa.test.ts
tests/hash/: blake2b.test.ts  blake3.test.ts  sha256.test.ts  sha3-256.test.ts  sha512.test.ts  siphash.test.ts
tests/post-quantum/: dilithium.test.ts  falcon.test.ts  kyber.test.ts
tests/searchable/: sse.test.ts
tests/symmetric/: aes.test.ts  chacha20.test.ts  poly1305.test.ts
wasm-src/abe-wasm/: Cargo.toml
wasm-src/abe-wasm/src/: abe_impl.rs  lib.rs
wasm-src/dilithium-wasm/: Cargo.toml
wasm-src/dilithium-wasm/src/: lib.rs
wasm-src/falcon-wasm/: Cargo.toml
wasm-src/falcon-wasm/src/: lib.rs
(+13 files in other folders)
