[package]
name = "abe-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
miracl_core = { version = "2.7.0", features = ["bn254"] }
console_error_panic_hook = "0.1"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
sha2 = "0.10"

