[package]
name = "dilithium-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
# NIST標準化された耐量子暗号プリミティブ
# ML-KEM (Kyber) と ML-DSA (Dilithium) をサポート
pqcrypto-std = "0.3"
