[package]
name = "falcon-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
js-sys = "0.3"
getrandom = { version = "=0.2.16", features = ["js"] }
rand = "0.8"
# NIST標準化された耐量子暗号署名スキーム
# FALCON (Fast-Fourier Lattice-based Compact Signatures over NTRU)
# WASI対応版を使用（Wasm環境で動作）
pqcrypto-falcon-wasi = "0.2"
pqcrypto-traits-wasi = "0.3"

